Added Contact details.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -12,6 +12,7 @@
 \usepackage[backend=biber]{biblatex}
 \addbibresource{cemracs23.bib}
 
+
 \usepackage{comment}
 %\begin{comment}
 \usepackage{geometry}
@@ -28,6 +29,12 @@
 \section*{CEMRACS 2023 project proposal: Structure-Preserving Numerical Integration of Dynamical Systems using Transformer Neural Networks}
 }
 
+\noindent\begin{tabular}{ll}
+\textbf{Contact:} 
+ & Michael Kraus \\
+& Max-Planck-Institut f\"ur Plasmaphysik/NMPP \\
+& Email: michael.kraus@ipp.mpg.de
+\end{tabular}
 
 \section{Context}
 
