Added docs for transformer and volume-preserving transformer.

--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -177,3 +177,19 @@ year = {2023}
   journal={Contributions to Plasma Physics},
   year={2022}
 }
+
+@article{graves2012long,
+  title={Long short-term memory},
+  author={Graves, Alex and Graves, Alex},
+  journal={Supervised sequence labelling with recurrent neural networks},
+  pages={37--45},
+  year={2012},
+  publisher={Springer}
+}
+
+@misc{rumelhart1985learning,
+  title={Learning internal representations by error propagation},
+  author={Rumelhart, David E and Hinton, Geoffrey E and Williams, Ronald J and others},
+  year={1985},
+  publisher={Institute for Cognitive Science, University of California, San Diego La~…}
+}
