--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -193,3 +193,27 @@ year = {2023}
   year={1985},
   publisher={Institute for Cognitive Science, University of California, San Diego La~…}
 }
+
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, Lukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
+@article{feng1998step,
+  title={The step-transition operators for multi-step methods of ODE's},
+  author={Feng, Kang},
+  journal={Journal of Computational Mathematics},
+  pages={193--202},
+  year={1998},
+  publisher={JSTOR}
+}
