Removed unnecessary tikz.

--- a/paper/src/tikz/transformer.tex
+++ b/paper/src/tikz/transformer.tex
@@ -1,7 +1,6 @@
 \documentclass{standalone}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.15}
-\usetikzlibrary{calc,hobby,arrows.meta,3d}
+\usepackage{tikz}
+\usetikzlibrary{fit, calc}
 
 \usepackage{xcolor}
 \definecolor{morange}{RGB}{255,127,14}
