structure-preserving -> volume-preserving.

--- a/paper/src/tikz/vp_transformer.tex
+++ b/paper/src/tikz/vp_transformer.tex
@@ -18,7 +18,7 @@
     arrow/.style={-stealth, thick, rounded corners},
 ]
 \node (input) {Input};
-\node[above of=input, attmodule, align=center, yshift=.6cm] (att) {Structure-Preserving\\Attention};
+\node[above of=input, attmodule, align=center, yshift=.6cm] (att) {Volume-Preserving\\Attention};
 \node[above of=att, addmodule, align=center] (add1) {\st{Add}};
 \node[above of=add1, ffnnmodule, align=center] (ffnn) {VPFF\\Net};
 \node[above of=ffnn, addmodule, align=center] (add2) {Add};
