--- a/paper/src/assets/preamble.tex
+++ b/paper/src/assets/preamble.tex
@@ -10,19 +10,15 @@
 \documentclass[proc]{edpsmath}
 
 
+%%%%%%%%%%%%%--PREAMBLE--%%%%%%%%%%%%%%%%%%
 \usepackage{./documenter_custom}
 \usepackage{./custom}
-%%%%%%%%%%%%%--PREAMBLE--%%%%%%%%%%%%%%%%%%
-%%-----------------------------
-%%         ...........
-%%         your macros
-%%         ...........
-%%-------------------------%%----
+
 %%%%%%%%%%%%%%%--BODY--%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
-\title{Volume-Preserving Neural Networks for Learning Parametrized Hamiltonian Systems}% \thanks{CIRM}% At most 5 thanks
+\title{Volume-Preserving Transformers for Learning Time Series Data with Structure}% \thanks{CIRM}% At most 5 thanks
 %
 \author{Benedikt Brantner}\address{Max-Planck-Institut f\"ur Plasmaphysik, Boltzmannstra\ss{}e 2, 85748 Garching}
 \author{Michael Kraus}\sameaddress{1} %{Max-Planck-Institut f\"ur Plasmaphysik, Boltzmannstra\ss{}e 2, 85748 Garching}
