--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -236,7 +236,7 @@ year = {2023}
 
 @misc{rtx4090,
     title = {GeForce RTX 4090},
-    howpublished={\url{https://github.com/JuliaGNI/GeometricIntegrators.jl}},
+    howpublished={\url{https://www.nvidia.com/de-de/geforce/graphics-cards/40-series/rtx-4090/}},
     author = {NVIDIA},
     year = {2022},
     note = {Accessed on April 3, 2024.}
