--- a/paper/src/VolumePreservingTransformer.bib
+++ b/paper/src/VolumePreservingTransformer.bib
@@ -324,3 +324,19 @@ year = {2023}
   howpublished={\url{https://github.com/JuliaGNI/GeometricIntegrators.jl}},
   doi={10.5281/zenodo.3648325}
 }
+
+@article{chen2018neural,
+  title={Neural ordinary differential equations},
+  author={Chen, Ricky TQ and Rubanova, Yulia and Bettencourt, Jesse and Duvenaud, David K},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
+
+@book{nocedal1999numerical,
+  title={Numerical optimization},
+  author={Nocedal, Jorge and Wright, Stephen J},
+  year={1999},
+  address={Heidelberg},
+  publisher={Springer}
+}
